<?xml version="1.0"?>
<package format="2">
  <name>pose_corrector</name>
  <version>0.0.1</version>
  <description>The inboard pose corrector package</description>

  <maintainer email="someone@todo.todo">anonymus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>

</package>
